# libstorm-example

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
assets/: assetlist.json
assets/fonts/: list.json
scripts/: build-android.bat.notworking  build-release.bat  build-vita.sh  build.bat  build.sh  clean.bat  clean.sh  install-deps-android.bat  install-deps.bat  run-vita.sh  run.bat  run.sh
src/: main.cpp
src/components/: components.hpp  rect.hpp
src/nodes/: all.hpp  scrollingRectangles.cpp  scrollingRectangles.hpp  simpleNode.cpp  simpleNode.hpp
src/nodes/LoadingState/: LoadingBar.cpp  LoadingBar.hpp
src/nodes/MainState/: FPSText.cpp  FPSText.hpp  MainText.cpp  MainText.hpp  ScrollingRectangles.cpp  ScrollingRectangles.hpp  all.hpp
src/nodes/loadingState/: all.hpp  loadingBar.cpp  loadingBar.hpp
src/nodes/mainState/: all.hpp  fpsText.cpp  fpsText.hpp  mainText.cpp  mainText.hpp  scrollingRectangles.cpp  scrollingRectangles.hpp
src/objects/: objects.hpp
src/objects/menu/: obj_background.hpp  obj_fpstext.hpp  obj_menutext.hpp  obj_versiontext.hpp
src/objects/test/: obj_background.hpp
src/states/: LoadingState.cpp  LoadingState.hpp  MainState.cpp  MainState.hpp  loadingState.cpp  loadingState.hpp  mainState.cpp  mainState.hpp  mainstate.hpp  states.hpp
src/systems/: rectdraw.cpp  rectdraw.hpp  systems.hpp
